# suiy

./: common_api_demo.tar
DOS/common_api_demo/: CMakeLists.txt  CMakeLists.txt.bak  auto.sh
DOS/common_api_demo/app_client/: CMakeLists.txt  CMakeLists.txt.bak
DOS/common_api_demo/app_client/src/: APP_NAMEClient.cpp
DOS/common_api_demo/app_service/: CMakeLists.txt  CMakeLists.txt.bak
DOS/common_api_demo/app_service/src/: APP_NAMEService.cpp  APP_NAMEStubImpl.cpp  APP_NAMEStubImpl.hpp
DOS/common_api_demo/dbus_so/: demo.fidl
ama-app-framework/: CMakeLists.txt  LICENSE  README  build.sh  buildAll.sh  buildForEV.sh  buildForEVGaia.sh  buildForEVMentor.sh  buildForHS5.sh  cleanBuild.sh  cppcheck.sh  createFastBuildDir.sh  gaia_tar2zip.sh  install.sh  pack.sh  removeFrameworkFromAMASDK.sh  sysrootInstall.sh
ama-app-framework/ama-app-common/: CMakeLists.txt  libama-app-common.pc
ama-app-framework/ama-app-common/inc/COMMON/: Broadcaster.h  CMDOption.h  ComparableFunction.h  Dependency.h  DomainInvoker.h  HandleManagement.h  KeyValuePairObserver.h  KeyValuePairReader.h  LogProxy.h  NotifyWaiter.h  RedundantFileIO.h  StringOperation.h  ThreadSafeValueKeeper.h  TimeStamp.h  Timeout.h  UniqueID.h
ama-app-framework/ama-app-common/inc/FILESYS/: FileSystem.h
ama-app-framework/ama-app-common/inc/GR/: DoubleTapRecognizer.h  DoubleTapState.h  TapRecognizer.h  TapState.h  TouchRecognizer.h  TouchState.h  TouchStateProxyBase.h  TouchStateProxyTimeout.h
ama-app-framework/ama-app-common/inc/ILM/: HMIType.h  ILMClient.h  ILMException.h  InputPeripheral.h  Layer.h  RSEScreen.h  Screen.h  ScreenSetting.h  Surface.h  VirtualScreenManager.h
ama-app-framework/ama-app-comservice/: CMakeLists.txt  ama-app-comservice.service
ama-app-framework/ama-app-comservice/src/: AMGRSurfaces.cpp  AMGRSurfaces.h  AppManagerProxy.cpp  AppManagerProxy.h  ClusterProxy.cpp  ClusterProxy.h  CommonServiceLog.h  MCUProxy.cpp  MCUProxy.h  ProCtrl.cpp  ProCtrl.h  ProService.cpp  ProService.h  ProTask.h  StateManagerProxy.cpp  StateManagerProxy.h  checkWeLinkDevice.cpp  checkWeLinkDevice.h  main.cpp
ama-app-framework/ama-app-double-click-scanner/: CMakeLists.txt
ama-app-framework/ama-app-manager/: AlwaysOnApp.txt  AlwaysVisibleServices.txt  AppID.txt  BootSequence.txt  CMakeLists.txt  FastBootList  FastBootListForEV  FastBootListForHS5  LayerID.txt  LogID.txt  ama-app-manager.service  defLastSource  defLastSourceForHS5  dlt_logstorage.conf  frameworkConfig.xml  frameworkConfigForEV.xml  frameworkConfigForHS7AIO.xml  pers_config.xml
ama-app-framework/ama-app-manager/res/: 99-seats.rules
ama-app-framework/ama-app-manager/src/: main.cpp
ama-app-framework/ama-app-picture-display/: CMakeLists.txt  libama-app-picture-display.pc
ama-app-framework/ama-app-picture-display/inc/: AppPictureDisplay.h
ama-app-framework/ama-app-picture-display/src/: AppPictureDisplay.cpp
ama-app-framework/ama-app-sdk/: CMakeLists.txt  libappSDK.pc
ama-app-framework/ama-app-surface-creater/: CMakeLists.txt  libsurfaceCreater.pc
ama-app-framework/ama-app-surface-creater/inc/: SurfaceCreater.h  config.h  ivi-application-client-protocol.h  os-compatibility.h
ama-app-framework/ama-app-surface-creater/src/: ivi-application-protocol.c  os-compatibility.c  simple-shm.c
ama-app-framework/ama-app-tools/apiClient/: CMakeLists.txt
ama-app-framework/ama-app-tools/appClient/: CMakeLists.txt
ama-app-framework/ama-app-tools/autoTestTool/: CMakeLists.txt
ama-app-framework/ama-app-tools/stressTestAuto/: CMakeLists.txt
ama-app-framework/ama-app-tools/surfaceWatcher/: CMakeLists.txt
ama-app-framework/ama-log/: CMakeLists.txt  libama-log.pc  logDir.txt
ama-app-framework/ama-log/inc/: CDltWrapper.h  log.h
ama-app-framework/ama-log/src/: CDltWrapper.cpp
ama-app-framework/ama-mem/: CMakeLists.txt  libama-mem.pc
ama-app-framework/ama-mem/inc/: ama_mem.h
ama-app-framework/ama-mem/src/: Mem.cpp  test.cpp
ama-app-framework/ama-sdk-DB/: CMakeLists.txt  libappDB.pc
ama-app-framework/ama-sdk-DB/inc/: AppDB.h  AppDBDef.h  AppDBImpl.h  DBTask.h
ama-app-framework/ama-sdk-DB/src/: AppDB.cpp  AppDBImpl.cpp
ama-app-framework/ama-service-IS/: CMakeLists.txt
ama-app-framework/ama-service-IS/commonAPI/: CMakeLists.txt
ama-app-framework/ama-service-IS/sdk/: CMakeLists.txt  libappISSDK.pc
ama-app-framework/ama-service-IS/service/: CMakeLists.txt  ama-service-IS.service
ama-app-framework/ama-utility/: CMakeLists.txt
ama-app-framework/ama-utility/inc/: ama_audioTypes.h  ama_enum.h  ama_powerTypes.h  ama_setTypes.h  ama_stateTypes.h  ama_types.h
ama-app-framework/ama-utility/src/: ama_types.cpp
ama-app-framework/appMgrCAPI/: CMakeLists.txt
ama-app-framework/appMgrCAPI/fidl/: AppMgr.fidl  ime.fidl
ama-app-framework/appUIDemo/: CMakeLists.txt  build.sh  install.sh
ama-app-framework/appUIDemo/inc/: LOG.h  hmi.h  launcher.h
ama-app-framework/appUIDemo/scripts/: startBTApp.sh  startHomeApp.sh  startMediaApp.sh  startNotifyApp.sh  startRadioApp.sh  startSettingApp.sh  startTboxApp.sh  startVRApp.sh  startWeston.sh
ama-app-framework/appUIDemo/src/: UIPLCEx.cpp  common.h  mainwindow.cpp
ama-app-framework/appUIDemo/uiLib/: cairo-util.c  cairo-util.h  common.h  cursor.c  dump.cpp  dump.oxx  helpers.h  image-loader.c  image-loader.h  launcher.cpp  launcher.oxx  os-compatibility.c  os-compatibility.h  startApp.c  touch.c  utils.c  window.cpp  window.oxx
ama-app-framework/cmake/: CommonAPIGenerator.cmake  DefineIncludePath.cmake  FindPackage.cmake  OptionDefine.cmake  kanzi.cmake
ama-app-framework/easySQLitePro/: CMakeLists.txt
ama-app-framework/easySQLitePro/easySQLite/: CMakeLists.txt  SHA1.cpp  SHA1.h  SqlCommon.cpp  SqlCommon.h  SqlDatabase.cpp  SqlField.cpp  SqlValue.cpp  libeasySQLite.pc
ama-app-framework/ivi-control-preload/: CMakeLists.txt
ama-app-framework/ivi-control-preload-winston/: CMakeLists.txt
ama-app-framework/ivi-control-preload-winston/src/: main.c
ama-app-framework/ivi-control-preload/inc/: screen.h
ama-app-framework/ivi-control-preload/src/: ivi-control-preload.c  screen.c
(+500 files in other folders)
